@@ -339,6 +339,9 @@ C-API
 Library
 -------
 
+- Issue #6656: fix locale.format_string to handle escaped percents
+  and mappings.
+
 - Issue #2302: Fix a race condition in SocketServer.BaseServer.shutdown,
   where the method could block indefinitely if called just before the
   event loop started running.  This also fixes the occasional freezes
